k8s-configs/dashboard/deployment.yaml
# Dashboard Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: eugenepulup228/dashboard:latest # You'll need to build and push this image
          ports:
            - containerPort: 3000
