k8s-configs/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 3000
      targetPort: 3000
    - port: 24678
      targetPort: 24678
