k8s-configs/dashboard/ingress.yaml
# Ingress for Dashboard
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dashboard.hirehub.loc # Changed to localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 3000
